<resources>
    <string name="app_name">XiQuZiMu</string>
    <string name="app_zh_name">戏曲字幕</string>
    <string name="accessibility_service_label">戏曲字幕</string>
    <string name="accessibility_service_description">开启辅助服务，用于快速地自动评论。\n\n提示：打开辅助功能时可能会收到系统的警示提醒。\n\n承诺：戏曲字幕不会有侵害用户利益行为，不会收集用户任何信息，请放心开启。</string>
    <string name="pinglunBtn">评论</string>
    <string name="pinglunSwitch">评论</string>
    <string name="pinglinList">列表</string>
    <string name="moveLayoutBtn">移动</string>
    <string name="dianzan">点赞</string>
    <string name="closeFloating">关闭</string>
    <string name="kaiOrShoue">开/收</string>
    <string name="dy_input_layout_text">说点什么...</string>
    <string name="zimu_list_title">唱段列表</string>
    <string name="currentZimuTitle">当前没有选择唱词</string>
    <string name="no_openFloatingText">开启悬浮权限</string>
    <string name="openFloatingText">已开启悬浮窗</string>
    <string name="NoApenaccesibilityText">开启辅助服务</string>
    <string name="ApenaccesibilityText">已开启辅助服务</string>
    <string name="settingsTips">请先开启以下权限</string>
    <string name="runFloatingServiceBtn">运行</string>
    <string name="clearCurrentZiMuBtn">清除</string>
    <string name="update">更新</string>
    <string name="add">新增</string>
    <string name="package_version" />
    <string name="floatingTitle">悬浮窗口</string>
    <string name="fetchChangDuan">更新唱段</string>
    <string name="title_activity_nav_main">NavMainActivity</string>
    <string name="title_home">首页</string>
    <string name="title_dashboard">列表</string>
    <string name="title_about">关于</string>
    <string name="searchEditTextHint">查询点什么&#8230;</string>
    <string name="aboutApp">一款应用于戏曲直播时自动发送字幕的软件</string>
    <string name="jumu_tab_item">剧目</string>
    <string name="changduan_tab_item">唱段</string>
    <string name="changci_tab_item">唱词</string>
    <string name="download">下载</string>
    <string name="juZhong">剧种：</string>
    <string name="juMu">剧目：</string>
    <string name="offset">时差</string>
    <string name="changDuanName">唱段：</string>
    <string name="saveChangCi">保存</string>
    <string name="add_changci_item">新增项</string>
    <string name="remove_changci_item">删除</string>
    <string name="developer">开发者：心灵的孤僻</string>
    <string name="giteeProjectUrl">https://gitee.com/xlgp/XiQuZiMu</string>
    <string name="item_go">前往</string>
    <string name="updateVersion">更新版本</string>
    <string name="projectUrl">项目地址：</string>
    <string name="remoteBtnText">下载远程唱段</string>
    <string name="createLRC">制作LRC唱词</string>
    <string name="statement">免责声明</string>
    <string name="web_loading">正在加载...</string>
    <string name="copy">复制</string>
    <string name="timeEditTextHint">时间</string>
    <string name="contentEditTextHint">唱词</string>
    <string name="laoding">laoding</string>
    <string name="item_share">分享</string>
    <string name="item_save">保存</string>

    <string-array name="copy_item_array">
        <item>🔹字幕版</item>
        <item>🔹纯净版</item>
    </string-array>
</resources>