<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#522D2D2D"
    android:orientation="vertical"
    android:padding="8dp"
    android:theme="@style/Theme.DouYinZiMu">

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/pingLunSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/pinglunSwitch"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/pingLunBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#88FFFFFF"
        android:text="@string/pinglunBtn"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/dianzanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:background="#85FFFFFF"
        android:text="@string/dianzan"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/closeBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#85FFFFFF"
        android:text="@string/closeFloating"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/moveLayoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="#8AFFFFFF"
        android:text="@string/moveLayoutBtn"
        android:textColor="#FFFFFF"
        app:cornerRadius="@dimen/material_emphasis_high_type" />

</LinearLayout>