<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#40000000"
    android:orientation="vertical"
    android:padding="8dp"
    android:theme="@style/Theme.DouYinZiMu">

    <Button
        android:id="@+id/moveLayoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#88FFFFFF"
        android:minWidth="60dp"
        android:minHeight="40dp"

        android:text="@string/moveLayoutBtn"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/pinglunListBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="#88FFFFFF"
        android:minWidth="60dp"
        android:minHeight="40dp"

        android:text="@string/pinglinList"
        android:textColor="#FFFFFF" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/pingLunSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"

        android:layout_marginBottom="6dp"
        android:width="60dp"
        android:background="#88FFFFFF"
        android:minHeight="40dp"
        android:text="@string/pinglunSwitch"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="12sp" />

    <Button
        android:id="@+id/dianzanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"

        android:background="#88FFFFFF"

        android:minWidth="60dp"
        android:minHeight="40dp"
        android:text="@string/dianzan"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/closeFloatingBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#88FFFFFF"

        android:minWidth="60dp"
        android:minHeight="40dp"
        android:text="@string/closeFloating"
        android:textColor="#ED4040" />

</LinearLayout>