<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.floating.toolbar.FloatingToolBarFragment">

    <ImageButton
        android:id="@+id/closeFloatingBtn"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@color/touming_btn"
        android:src="@drawable/ic_baseline_close_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/titleBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        android:contentDescription="@string/closeFloating" />

    <Button
        android:id="@+id/titleBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/touming_btn"
        android:text="@string/floatingTitle"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/kaiOrShouBtn"
        app:layout_constraintStart_toEndOf="@+id/closeFloatingBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/kaiOrShouBtn"
        android:layout_width="40dp"
        android:layout_height="match_parent"
        android:background="@color/touming_btn"
        android:src="@drawable/ic_baseline_arrow_drop_up_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/titleBtn"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/kaiOrShoue" />
</androidx.constraintlayout.widget.ConstraintLayout>