<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:paddingTop="0dp">


        <ImageView
            android:id="@+id/clear"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/clearCurrentZiMuBtn"
            android:focusable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:src="@drawable/ic_baseline_delete_24" />

        <ImageView
            android:id="@+id/update"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/update"
            android:focusable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:src="@drawable/ic_baseline_arrow_downward_24" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:clickable="true"
            android:contentDescription="@string/add"
            android:focusable="true"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:src="@drawable/ic_baseline_add_24" />

        <TextView
            android:id="@+id/totalCountTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:paddingStart="0dp"
            android:paddingEnd="20dp"
            android:textAlignment="textEnd"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <me.xlgp.xiquzimu.view.ChangDuanSearchRecyclerviewLayout
        android:id="@+id/zimu_list_SearchRecyclerviewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </me.xlgp.xiquzimu.view.ChangDuanSearchRecyclerviewLayout>
</LinearLayout>